--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
   "engines": {
     "node": ">=18.0.0"
   },
+  "type": "module",
   "dependencies": {
-    "@xenova/transformers": "^2.17.0"
+    "@huggingface/transformers": "^3.3.0"
   },
   "optionalDependencies": {
     "puppeteer": "^22.0.0"
