feat(01-02): create search CLI with multiple output formats
- Add scripts/search-cli.js with table, json, markdown output
- Support filters: --platform, --framework, --artist
- Enrich results with name, description, aesthetics, links
- Update package.json search script to use new CLI
- Show helpful usage when no query provided

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "fetch:artblocks:full": "node scripts/artblocks-fetcher.js --with-scripts",
     "fetch:fxhash": "node scripts/fxhash-fetcher.js",
     "process": "node scripts/process-dataset.js data/artblocks-dataset.json fxhash-dataset.json",
-    "embeddings": "node services/embeddings/embed.js generate",
-    "search": "node services/embeddings/embed.js search",
+    "embeddings": "node services/embeddings/generate.js",
+    "search": "node scripts/search-cli.js",
     "render": "node services/renderer/render.js",
     "mcp": "node mcp-server/src/index.js",
     "assistant": "node scripts/art-assistant.js",
