--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generative-art-mcp",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "MCP server for generative art dataset - semantic search, code examples, project data",
   "main": "src/index.js",
   "type": "module",
@@ -9,11 +9,13 @@
   },
   "scripts": {
     "start": "node src/index.js",
-    "build:embeddings": "node ../services/embeddings/embed.js generate"
+    "build:embeddings": "node ../services/embeddings/generate.js"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0",
-    "@xenova/transformers": "^2.17.0"
+    "@modelcontextprotocol/sdk": "^1.25.2"
+  },
+  "peerDependencies": {
+    "zod": "^3.25.0"
   },
   "engines": {
     "node": ">=18.0.0"
