feat(02-02): wire analysis into renderer and add CLI commands
- Fix Puppeteer v22 deprecated waitForTimeout with sleep helper
- Update analyze() method to use analyzeCanvas from analyze.js
- Add analyze-json CLI command for structured JSON output
- Add render:capture, render:analyze, render:batch, render:variations npm scripts
- Support --analyze flag in batch command for JSON output alongside screenshots

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "embeddings": "node services/embeddings/generate.js",
     "search": "node scripts/search-cli.js",
     "render": "node services/renderer/render.js",
+    "render:capture": "node services/renderer/render.js capture",
+    "render:analyze": "node services/renderer/render.js analyze",
+    "render:batch": "node services/renderer/render.js batch",
+    "render:variations": "node services/renderer/render.js variations",
     "mcp": "node mcp-server/src/index.js",
     "assistant": "node scripts/art-assistant.js",
     "start": "node scripts/art-assistant.js"
